new upstream release 256.53
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1455 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
+
+  [ Andreas Beckmann ]
+  * New upstream release.
+    (Closes: #586958, #592205, #592574, #594310, #595210)
+  * Upload to experimental.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
+
 nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
 
   [ Andreas Beckmann ]
