--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * New upstream release.
     (Closes: #586958, #592205, #592574, #594310, #595210)
   * Upload to experimental.
+  * Add libxvmc1 to Build-Depends.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
