--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
     (Closes: #586958, #592205, #592574, #594310, #595210)
   * Upload to experimental.
   * Add libxvmc1 to Build-Depends.
+  * Several libraries were renamed and SONAMEs were changed by upstream.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
