--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * Upload to experimental.
   * Add libxvmc1 to Build-Depends.
   * Several libraries were renamed and SONAMEs were changed by upstream.
+  * Ship new header cudaVDPAU.h.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
