Update nv-kernel.ids for 256.53.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1460 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * Several libraries were renamed and SONAMEs were changed by upstream.
   * Ship new header cudaVDPAU.h.
   * Update symbols control files.
+  * Update nv-kernel.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
