--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * Ship new header cudaVDPAU.h.
   * Update symbols control files.
   * Update nv-kernel.ids.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
