--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * Update symbols control files.
   * Update nv-kernel.ids.
   * Update lintian overrides.
+  * Add Conflicts: fglrx-driver, fglrx-glx, fglrx-glx-ia32 to the
+    libgl*-nvidia-alternatives packages, too.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
