--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * Update lintian overrides.
   * Add Conflicts: fglrx-driver, fglrx-glx, fglrx-glx-ia32 to the
     libgl*-nvidia-alternatives packages, too.
+  * Add myself to Uploaders.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
 
