--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ nvidia-graphics-drivers (256.53-0.1) experimental; urgency=low
   * libgl1-nvidia-alternatives-ia32: abort before configuring on broken
     systems, i.e. /usr/lib32 being a symlink pointing to
     /emul/ia32-linux/usr/lib (reinstall libc6-i386 to fix)
+  * debian/*.postinst(configure): abort early if DPKG_MAINTSCRIPT_PACKAGE is
+    not set (usually if called from dpkg-reconfigure, see #560317)
   * Add myself to Uploaders.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 02 Sep 2010 06:18:24 +0200
