--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * Remove /emul directories if empty after removing old NVIDIA files in
+    the nvidia-glx-ia32 postinst.
+  * Update versioned Breaks for the new NVIDIA legacy releases.
+
+ -- Russ Allbery <rra@debian.org>  Sat, 18 Sep 2010 14:28:42 -0700
+
 nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
 
   [ Andreas Beckmann ]
