nvidia-glx: depend on xorg-video-abi-6.0 as suggested by Xorg maintainers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1522 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
     /emul/ia32-linux/usr/lib (reinstall libc6-i386 to fix)
   * debian/*.postinst(configure): abort early if DPKG_MAINTSCRIPT_PACKAGE is
     not set (usually if called from dpkg-reconfigure, see #560317)
+  * nvidia-glx: depend on xorg-video-abi-6.0 as suggested by Xorg maintainers.
   * Add myself to Uploaders.
 
   [ Russ Allbery ]
