--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
   * debian/*.postinst(configure): abort early if DPKG_MAINTSCRIPT_PACKAGE is
     not set (usually if called from dpkg-reconfigure, see #560317)
   * nvidia-glx: depend on xorg-video-abi-6.0 as suggested by Xorg maintainers.
+  * libgl1-nvidia-glx: don't remove alternative owned by libgl1-nvidia-dev.
   * Add myself to Uploaders.
 
   [ Russ Allbery ]
