--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
     not set (usually if called from dpkg-reconfigure, see #560317)
   * nvidia-glx: depend on xorg-video-abi-6.0 as suggested by Xorg maintainers.
   * libgl1-nvidia-glx: don't remove alternative owned by libgl1-nvidia-dev.
+  * NEWS: rephrase legacy 71xx note because these drivers no longer work with
+    current Xorg.
   * Add myself to Uploaders.
 
   [ Russ Allbery ]
