--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
   * libgl1-nvidia-glx: don't remove alternative owned by libgl1-nvidia-dev.
   * NEWS: rephrase legacy 71xx note because these drivers no longer work with
     current Xorg.
+  * nvidia-kernel-source: lower Recommends: nvidia-glx to Suggests to avoid
+    pulling nvidia-kernel-dkms into the system before the user had a chance to
+    build a module (see #590221).
   * Add myself to Uploaders.
 
   [ Russ Allbery ]
