finalize changes for 195.36.31-4
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1529 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
+nvidia-graphics-drivers (195.36.31-4) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * Remove /emul directories if empty after removing old NVIDIA files in
@@ -26,7 +26,7 @@ nvidia-graphics-drivers (195.36.31-4) UNRELEASED; urgency=low
   [ Russ Allbery ]
   * Remove Andres Mejia from Uploaders at his request.
 
- -- Russ Allbery <rra@debian.org>  Sat, 18 Sep 2010 14:28:42 -0700
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 23 Sep 2010 02:19:30 +0200
 
 nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
 
