--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ nvidia-graphics-drivers (195.36.31-4) unstable; urgency=low
   * Add new patch 2.6.36-ioctl.patch to fix module build for kernel 2.6.36.
   * Add changelog entries missing due to concurrent development: 1.0.9625-2
     (experimental), 1.0.9625-1 (experimental) and 1.0.7174-4 (unstable).
+  * Stop shipping libGL.so symlinks and handling alternatives involving them.
   * Add myself to Uploaders.
 
   [ Russ Allbery ]
