--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,18 @@
+nvidia-graphics-drivers (256.53-2) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * Upload to experimental.
+  * Merge 195.36.31-4. 
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 25 Sep 2010 09:56:53 +0200
+
 nvidia-graphics-drivers (256.53-1) experimental; urgency=low
 
   [ Andreas Beckmann ]
   * New upstream release.
     (Closes: #586958, #592205, #592574, #594310, #595210)
   * Upload to experimental.
+  * Packaging based on 195.36.31-3.
   * Add libxvmc1 to Build-Depends.
   * Several libraries were renamed and SONAMEs were changed by upstream.
   * Ship new header cudaVDPAU.h.
