--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,11 @@ nvidia-graphics-drivers (256.53-2) UNRELEASED; urgency=low
   [ Andreas Beckmann ]
   * Upload to experimental.
   * Merge 195.36.31-4. 
+  * Stop shipping CUDA and OpenCL headers.  NVIDIA will stop including them in
+    the 260.xx release.  The NVIDIA CUDA Toolkit (which is the only user of
+    these header files) already contains them and is the recommended source
+    for these header files.  They will be contained in an nvidia-cuda-dev
+    package in the future.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 25 Sep 2010 09:56:53 +0200
 
