--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ nvidia-graphics-drivers (195.36.31-5) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * Drop Breaks: on old xserver now that we depend on xorg-video-abi-6.0.
+  * libgl1-nvidia-alternatives needs to Breaks: old nvidia-glx*-dev packages,
+    some were shipping a libGL.so symlink which may cause problems on partial
+    upgrades.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 26 Sep 2010 08:08:02 +0200
 
