--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (195.36.31-5) UNRELEASED; urgency=low
   * libgl1-nvidia-alternatives needs to Breaks: old nvidia-glx*-dev packages,
     some were shipping a libGL.so symlink which may cause problems on partial
     upgrades.
+  * libgl*-nvidia-alternatives* needs to Depends: dpkg (>= 1.15) for using
+    dpkg-divert --listpackage in the postinst script.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 26 Sep 2010 08:08:02 +0200
 
