--- a/debian/changelog
+++ b/debian/changelog
@@ -2,9 +2,13 @@ nvidia-graphics-drivers (195.36.31-5) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * Drop Breaks: xserver-xorg-core (<< 2:1.6).
-    There is no file name conflict between /usr/lib/libGLcore.so.1 and
-    /usr/lib/xorg/modules/extensions/libGLcore.so (only in << 2:1.6) that
-    could cause the wong library to be loaded by NVIDIA's libgl.so.
+    There is no file name conflict between /usr/lib/libGLcore.so.1 (from
+    NVIDIA) and /usr/lib/xorg/modules/extensions/libGLcore.so (only in
+    xserver-xorg-core << 2:1.6) that could cause the wrong library to be
+    loaded by NVIDIA's libgl.so.
+  * Change xserver dependency to 'xorg-video-abi-6.0 | xserver-xorg-core
+    (<< 2:1.7.7)' as the driver is supposed to work with older abi versions,
+    too.
   * libgl1-nvidia-alternatives needs to Breaks: old nvidia-glx*-dev packages,
     some were shipping a libGL.so symlink which may cause problems on partial
     upgrades.
