--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ nvidia-graphics-drivers (195.36.31-5) UNRELEASED; urgency=low
   * Change xserver dependency to 'xorg-video-abi-6.0 | xserver-xorg-core
     (<< 2:1.7.7)' as the driver is supposed to work with older abi versions,
     too.
+  * Add Pre-Depends: libc6-i386 (>= 2.9-18) to all packages handling files in
+    /usr/lib32.
   * libgl1-nvidia-alternatives needs to Breaks: old nvidia-glx*-dev packages,
     some were shipping a libGL.so symlink which may cause problems on partial
     upgrades.
