--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (195.36.31-5) UNRELEASED; urgency=low
     too.
   * Add Pre-Depends: libc6-i386 (>= 2.9-18) to all packages handling files in
     /usr/lib32.
+  * Restrict nvidia-opencl-common Recommends: nvidia-opencl-icd-ia32 to amd64.
   * libgl1-nvidia-alternatives needs to Breaks: old nvidia-glx*-dev packages,
     some were shipping a libGL.so symlink which may cause problems on partial
     upgrades.
