--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,14 @@ nvidia-graphics-drivers (256.53-2) UNRELEASED; urgency=low
   * Stop shipping CUDA and OpenCL headers.  NVIDIA will stop including them in
     the 260.xx release.  The NVIDIA CUDA Toolkit (which is the only user of
     these header files) already contains them and is the recommended source
-    for these header files.  They will be contained in an nvidia-cuda-dev
-    package in the future.
+    for these header files.
   * Drop libcuda1-dev and nvidia-libopencl1-dev packages, move libOpenCL.so
     link to nvidia-libopencl1.  libcuda1 and nvidia-libopencl1 Conflicts and
     Replaces their old -dev packages for clean upgrades without transitionals.
+  * NOTE to packagers of software that uses NVIDIA CUDA and/or OpenCL: use
+    Build-Depends: nvidia-cuda-dev and/or nvidia-opencl-dev or
+    nvidia-cuda-toolkit.  If a certain OpenCL API is required, add versioned
+    B-D on opencl-headers, e.g (<< 1.1) for API 1.0 or (>> 1.1) for API 1.1.
 
   [ Russ Allbery ]
   * Use /lib/modules/`uname -r`/build as the default kernel build location
