--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ nvidia-graphics-drivers (256.53-2) UNRELEASED; urgency=low
     Build-Depends: nvidia-cuda-dev and/or nvidia-opencl-dev or
     nvidia-cuda-toolkit.  If a certain OpenCL API is required, add versioned
     B-D on opencl-headers, e.g (<< 1.1) for API 1.0 or (>> 1.1) for API 1.1.
+  * Drop the transitional packages libnvidia-compiler1{,-ia32}.
+    Use unversioned Conflicts/Replaces in the successor packages
+    libnvidia-compiler{,-ia32} to ensure the old transitionals are removed.
 
   [ Russ Allbery ]
   * Use /lib/modules/`uname -r`/build as the default kernel build location
