--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (256.53-2) UNRELEASED; urgency=low
     - nvidia-libvdpau1{,-ia32}, nvidia-libvdpau-dev
     - libnvidia-compiler1{,-ia32}
       (now Conflicts/Replaces by libnvidia-compiler{,-ia32}).
+  * Lower Priority of *-ia32 packages to extra (debcheck).
 
   [ Russ Allbery ]
   * Use /lib/modules/`uname -r`/build as the default kernel build location
