move empty package nvidia-glx-ia32 to Section: oldlibs
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1619 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,7 +21,8 @@ nvidia-graphics-drivers (256.53-2) experimental; urgency=low
       (now Conflicts/Replaces by libnvidia-compiler{,-ia32}).
   * Lower Priority of *-ia32 packages to extra (debcheck).
   * Switch default Section to non-free/libs with a few exceptions: x11
-    (nvidia-glx), utils (nvidia-smi), kernel (nvidia-kernel-{source,dkms}).
+    (nvidia-glx), utils (nvidia-smi), kernel (nvidia-kernel-{source,dkms}),
+    oldlibs (nvidia-glx-ia32).
 
   [ Russ Allbery ]
   * Use /lib/modules/`uname -r`/build as the default kernel build location
