--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * New upstream release.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 14:40:06 +0200
+
 nvidia-graphics-drivers (256.53-2) experimental; urgency=low
 
   [ Andreas Beckmann ]
