update nv-kernel.ids for devices newly supported in 260.19.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1625 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * New upstream release.
+  * Upload to experimental.
+  * Update nv-kernel.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 14:40:06 +0200
 
