conftest.h: implement new (after 195.xx) conftest.sh functions pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations, sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1627 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
   * Upload to experimental.
   * Update nv-kernel.ids.
   * Drop 2.6.36-ioctl.patch, fixed upstream.
+  * conftest.h: implement new (after 195.xx) conftest.sh functions
+    pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations,
+    sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 14:40:06 +0200
 
