--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * If both original and diverted file exist when removing obsolete
+    diversions, move the original file (which is not owned by any package) out
+    of the way.  This problem may originate from incorrect diversion creation
+    before lenny (and was not noticed or fixed in lenny) or having used the
+    nvidia installer to install the driver in the past.  (Closes: #600327)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
+
 nvidia-graphics-drivers (195.36.31-5) unstable; urgency=low
 
   [ Andreas Beckmann ]
