Add a NEWS entry recommending to update all pre-squeeze nvidia packages before switching to a -legacy- variant.  (Closes: #596843)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1629 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
     of the way.  This problem may originate from incorrect diversion creation
     before lenny (and was not noticed or fixed in lenny) or having used the
     nvidia installer to install the driver in the past.  (Closes: #600327)
+  * Add a NEWS entry recommending to update all pre-squeeze nvidia packages
+    before switching to a -legacy- variant.  (Closes: #596843)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
 
