--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
     nvidia installer to install the driver in the past.  (Closes: #600327)
   * Add a NEWS entry recommending to update all pre-squeeze nvidia packages
     before switching to a -legacy- variant.  (Closes: #596843)
+  * Update gdm/kdm insufficient timeout NEWS entry: mention xdm (no workaround
+    needed) and that kdm will be fixed in 4:4.4.5-4.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
 
