--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
     before switching to a -legacy- variant.  (Closes: #596843)
   * Update gdm/kdm insufficient timeout NEWS entry: mention xdm (no workaround
     needed) and that kdm will be fixed in 4:4.4.5-4.
+  * Document the warnings emitted by the maintainer scripts in README.Debian.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
 
