update symbols control files for added/removed symbols in 260.19.12
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1633 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
   * conftest.h: implement new (after 195.xx) conftest.sh functions
     pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations,
     sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
+  * Update symbols control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 14:40:06 +0200
 
