Update lintian overrides.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/256.xx-experimental@1634 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
     pci_dma_mapping_error, scatterlist, pci_domain_nr, file_operations,
     sg_init_table.  Kernel versions of symbol (dis-)appearance from lxr.
   * Update symbols control files.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 14:40:06 +0200
 
