--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-nvidia-graphics-drivers (260.19.12-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (260.19.21-1) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
-  * New upstream release.
+  * New upstream release.  (Closes: #603754)
   * Upload to experimental.
   * Update nv-kernel.ids.
   * Drop 2.6.36-ioctl.patch, fixed upstream.
