--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
   * Document the warnings emitted by the maintainer scripts in README.Debian.
   * Install the upstream README.txt in the dkms package.  It is referenced by
     the package description.  Add a README.Debian, too.  (Closes: #602733)
+  * Add a note about the driver not working under the Xen hypervisor to
+    README.Debian.  (See: #570365)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
 
