--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
+nvidia-graphics-drivers (195.36.31-6) unstable; urgency=low
 
-  [ Andreas Beckmann ]
   * If both original and diverted file exist when removing obsolete
     diversions, move the original file (which is not owned by any package) out
     of the way.  This problem may originate from incorrect diversion creation
@@ -16,7 +15,7 @@ nvidia-graphics-drivers (195.36.31-6) UNRELEASED; urgency=low
   * Add a note about the driver not working under the Xen hypervisor to
     README.Debian.  (See: #570365)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sat, 16 Oct 2010 18:44:53 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 17 Nov 2010 14:43:29 -0800
 
 nvidia-graphics-drivers (195.36.31-5) unstable; urgency=low
 
