Add nvidia-bug-report.sh manpage contributed by Vincent Cheng.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1676 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * Add nvidia-bug-report.sh manpage contributed by Vincent Cheng.
+    (Closes: #604782)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sun, 28 Nov 2010 18:14:19 +0100
+
 nvidia-graphics-drivers (195.36.31-6) unstable; urgency=low
 
   * If both original and diverted file exist when removing obsolete
