--- a/debian/changelog
+++ b/debian/changelog
@@ -15,12 +15,17 @@ nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
     Try to kill the nvidia-installer process.
   * Add debconf/po-debconf infrastructure to interactively resolve conflicts
     with previous usage of the nvidia-installer.
+  * In libgl1-nvidia-alternatives preinst check for /usr/bin/nvidia-installer
+    and ask the user whether to run 'nvidia-installer --uninstall'.  If that
+    fails, offer to just delete the remaining files.  If the user chooses to
+    do the cleanup himself, the preinst fails as long as nvidia-installer is
+    still found on the system.  (Closes: #605337)
   * In the nvidia-glx postinst check for conflicting libraries (libGL.so.*.*
     remaining from previous usage of the nvidia-installer) and offer to delete
     them.  If the user chooses not to delete them, postinst configure fails as
     long as the user has not cleaned up or lets the postinst delete the files.
     (Currently the conflicting libraries are moved to
-    /var/lib/nvidia-backup.XXXXXX instead of deleting them.)
+    /var/lib/nvidia-backup.XXXXXX instead of deleting them.) (Closes: #606175)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 28 Nov 2010 18:14:19 +0100
 
