--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
+nvidia-graphics-drivers (195.36.31-7) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * Add nvidia-bug-report.sh manpage contributed by Vincent Cheng.
@@ -27,7 +27,7 @@ nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
     (Currently the conflicting libraries are moved to
     /var/lib/nvidia-backup.XXXXXX instead of deleting them.) (Closes: #606175)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sun, 28 Nov 2010 18:14:19 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 13 Dec 2010 11:31:36 +0100
 
 nvidia-graphics-drivers (195.36.31-6) unstable; urgency=low
 
