--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (260.19.29-1) UNRELEASED; urgency=low
   * New upstream release.  (Closes: #607430)
   * Upload to experimental.
   * Update nv-kernel.ids.
+  * Detect license changes by comparing debian/copyright with the shipped
+    LICENSE during build.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 20 Dec 2010 10:44:08 +0100
 
