--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (195.36.31-7) unstable; urgency=low
+nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * Add nvidia-bug-report.sh manpage contributed by Vincent Cheng.
@@ -8,26 +8,8 @@ nvidia-graphics-drivers (195.36.31-7) unstable; urgency=low
   * Let the bug-script to collect information about OpenGL and NVIDIA
     libraries and their symlinks, diversions and alternatives currently found
     on the system.  Also list files remaining from using the nvidia-installer.
-  * Add a pre-install hook for the nvidia-installer, giving a warning to users
-    running a NVIDIA-Linux-*.run file directly while Debian packages providing
-    the driver are installed.  This hook fails intentionally, but
-    unfortunately the default choice if the hook failed is to continue anyway.
-    Try to kill the nvidia-installer process.
-  * Add debconf/po-debconf infrastructure to interactively resolve conflicts
-    with previous usage of the nvidia-installer.
-  * In libgl1-nvidia-alternatives preinst check for /usr/bin/nvidia-installer
-    and ask the user whether to run 'nvidia-installer --uninstall'.  If that
-    fails, offer to just delete the remaining files.  If the user chooses to
-    do the cleanup himself, the preinst fails as long as nvidia-installer is
-    still found on the system.  (Closes: #605337)
-  * In the nvidia-glx postinst check for conflicting libraries (libGL.so.*.*
-    remaining from previous usage of the nvidia-installer) and offer to delete
-    them.  If the user chooses not to delete them, postinst configure fails as
-    long as the user has not cleaned up or lets the postinst delete the files.
-    (Currently the conflicting libraries are moved to
-    /var/lib/nvidia-backup.XXXXXX instead of deleting them.) (Closes: #606175)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 13 Dec 2010 11:31:36 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Sun, 28 Nov 2010 18:14:19 +0100
 
 nvidia-graphics-drivers (195.36.31-6) unstable; urgency=low
 
