--- a/debian/changelog
+++ b/debian/changelog
@@ -2,10 +2,11 @@ nvidia-graphics-drivers (260.19.36-1) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * New upstream release.  (Closes: #607430, #610755)
-    - Ensure that all system memory allocated for use with GPUs or within
-      user-space components of the NVIDIA driver stack is initialized to zero.
-      (Closes: #609338)
+    - Updated the NVIDIA kernel module to ensure that all system memory
+      allocated by it for use with GPUs or within user-space components of the
+      NVIDIA driver stack is initialized to zero.  (Closes: #609338)
   * Upload to experimental.
+  * Merge 195.36.31-7 (UNRELEASED).
   * Update nv-kernel.ids.
   * Detect license changes by comparing debian/copyright with the shipped
     LICENSE during build.
