--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (270.18-1) UNRELEASED; urgency=low
+
+  * New upstream beta.
+  * Upload to experimental.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 29 Jan 2011 16:56:41 +0100
+
 nvidia-graphics-drivers (260.19.36-1) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
