--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (270.18-1) UNRELEASED; urgency=low
   * Upload to experimental.
   * Update nv-kernel.ids.
   * Update symbols control files.
+  * Add package libnvidia-ml1 for the NVIDIA management library (NVML), a new
+    library added by upstream.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 29 Jan 2011 16:56:41 +0100
 
