--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (195.36.31-7) UNRELEASED; urgency=low
     uninitialized to user space.
   * Add instructions how to switch driver installation from the NVIDIA way
     (running the *.run file) to the Debian way (using packages).
-  * Let the bug-script to collect information about OpenGL and NVIDIA
+  * Let the bug-script collect detailed information about OpenGL and NVIDIA
     libraries and their symlinks, diversions and alternatives currently found
     on the system.  Also list files remaining from using the nvidia-installer.
 
